--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ main: pl.craftserve.paysign.PaySignPlugin
 api-version: '${apiVersion}'
 description: Sign payments for using redstone mechanism.
 depend: [Vault]
+softdepend: [LogBlock]
 
 permissions:
   craftservepaysign.*:
