--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ authors: ${authors}
 website: '${project.url}'
 main: pl.craftserve.paysign.PaySignPlugin
 api-version: '${apiVersion}'
-description: Sign payments for using redstone mechanism.
+description: Sign payments for using redstone mechanisms.
 depend: [Vault]
 softdepend: [LogBlock]
 
