Use JitPack for our own dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -83,9 +83,9 @@
         </dependency>
 
         <dependency>
-            <groupId>pl.craftserve.metrics</groupId>
-            <artifactId>plugin-metrics-lite</artifactId>
-            <version>0.1</version>
+            <groupId>com.github.Craftserve</groupId>
+            <artifactId>PluginMetrics</artifactId>
+            <version>lite-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
